--- a/kfkui-compose.yml
+++ b/kfkui-compose.yml
@@ -24,34 +24,34 @@ services:
 #      SASL_PLAINTEXT=> SASL_PLAINTEXT 使用 SASL 认证非加密通道
 #      SASL_SSL=> SASL_SSL 使用 SASL 认证并且 SSL 加密通道
 #      这部分 kafka配置解释可以查看  https://blog.csdn.net/qq_38263083/article/details/135154714
-  kafka2:
-    image: wurstmeister/kafka       # 镜像
-    container_name: kafka2
-    volumes:
-        - /etc/localtime:/etc/localtime # 挂载位置
-    ports:
-      - "9093:9092"
-    environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093 #注意,这里不能设置成localhost和127.0.0.1
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT
-      KAFKA_LISTENER_NAME_SELECTOR: INSIDE
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-  kafka3:
-    image: wurstmeister/kafka       # 镜像
-    container_name: kafka3
-    volumes:
-        - /etc/localtime:/etc/localtime # 挂载位置
-    ports:
-      - "9094:9092"
-    environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9094 #注意,这里不能设置成localhost和127.0.0.1
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT
-      KAFKA_LISTENER_NAME_SELECTOR: INSIDE
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+#  kafka2:
+#    image: wurstmeister/kafka       # 镜像
+#    container_name: kafka2
+#    volumes:
+#        - /etc/localtime:/etc/localtime # 挂载位置
+#    ports:
+#      - "9093:9092"
+#    environment:
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093 #注意,这里不能设置成localhost和127.0.0.1
+#      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT
+#      KAFKA_LISTENER_NAME_SELECTOR: INSIDE
+#      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+#  kafka3:
+#    image: wurstmeister/kafka       # 镜像
+#    container_name: kafka3
+#    volumes:
+#        - /etc/localtime:/etc/localtime # 挂载位置
+#    ports:
+#      - "9094:9092"
+#    environment:
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9094 #注意,这里不能设置成localhost和127.0.0.1
+#      KAFKA_LISTENERS: INSIDE://0.0.0.0:9094
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT
+#      KAFKA_LISTENER_NAME_SELECTOR: INSIDE
+#      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
@@ -59,8 +59,8 @@ services:
        - "8080:8080"
     depends_on:
       - kafka
-      - kafka2
-      - kafka3
+#      - kafka2
+#      - kafka3
     environment:
       DYNAMIC_CONFIG_ENABLED: 'true'
       KAFKA_CLUSTERS_0_NAME: local
